# TinyBeanBoi

./: .gitignore  Cargo.toml  README.md
artsrc/: blobcat.aseprite  sprite-sheet.aseprite
desktop/: Cargo.toml
desktop/src/: main.rs
game/: Cargo.toml
game/src/: lib.rs
game/src/input/: mod.rs
game/src/sprite/: mod.rs
game/src/ui/: menu.rs  mod.rs
pocket/: Cargo.toml
pocket/src/: main.rs
src/: main.rs
