[package]
name = "tiny-bean-boi"
version = "0.1.0"
authors = ["Vi Prime <1724913+vprime@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "tiny-bean-boi"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }

mipidsi = "0.8.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
fugit = "0.3.7"
anyhow = "1.0.86"


[build-dependencies]
embuild = "0.32.0"