[package]
name = "tiny-bean-boi-desktop"
version = "0.1.0"
authors = ["Vi Prime <vi@vprime.dev>"]
edition = "2021"

[[bin]]
name = "tiny-bean-boi-desktop"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = "0.27.2"
env_logger = "0.11.3"

tiny-bean-boi-lib = {path = "../game"}